# HumanResourceMachine

./: CMakeLists.txt  CoreThread.cpp  CoreThread.h  README.md  information.txt  levelchoosedialog.cpp  levelchoosedialog.h  levelchoosedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_levelchoosedialog.h  ui_mainwindow.h
